--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,6 @@
-# fly.toml file generated for chatfiles-ui on 2023-04-09T21:13:37+08:00
+# fly.toml file generated for chatemail-ui on 2023-04-09T21:13:37+08:00
 
-app = "chatfiles-ui"
+app = "chatemail-ui"
 kill_signal = "SIGINT"
 kill_timeout = 5
 mounts = []
