--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_CHAT_FILES_MAX_SIZE=0
-NEXT_PUBLIC_CHAT_FILES_UPLOAD_PATH=public/uploads# if you want to deploy on vercel, please use /tmp folder
-SUPABASE_SERVICE_ROLE_KEY=xxxx
-SUPABASE_URL=https://xxxx.supabase.co
+NEXT_PUBLIC_CHAT_FILES_UPLOAD_PATH=public/uploads
+SUPABASE_API_URL=https://xxxx.supabase.co
+SUPABASE_API_KEY=xxxx
 OPENAI_TYPE=OPENAI# OPENAI_TYPE=AZURE_OPENAI
 OPENAI_API_KEY=sk-xxx
 OPENAI_API_MODEL=gpt-3.5-turbo
@@ -9,4 +9,4 @@ AZURE_OPENAI_API_KEY=
 AZURE_OPENAI_API_DEPLOYMENT_NAME=
 AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME=
 AZURE_OPENAI_API_INSTANCE_NAME=
-AZURE_OPENAI_API_VERSION=2023-05-15#default
+AZURE_OPENAI_API_VERSION=2023-05-15
