--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,13 @@
-NEXT_PUBLIC_CHAT_FILES_MAX_SIZE=0
-NEXT_PUBLIC_CHAT_FILES_UPLOAD_PATH=public/uploads
+CHAT_FILES_MAX_SIZE=0
+CHAT_FILES_UPLOAD_PATH=public/uploads
 SUPABASE_API_URL=https://xxxx.supabase.co
 SUPABASE_API_KEY=xxxx
-OPENAI_TYPE=OPENAI# OPENAI_TYPE=AZURE_OPENAI
+OPENAI_TYPE=OPENAI
+#OPENAI_TYPE=AZURE_OPENAI
 OPENAI_API_KEY=sk-xxx
 OPENAI_API_MODEL=gpt-3.5-turbo
 AZURE_OPENAI_API_KEY=
 AZURE_OPENAI_API_DEPLOYMENT_NAME=
 AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME=
 AZURE_OPENAI_API_INSTANCE_NAME=
-AZURE_OPENAI_API_VERSION=2023-05-15
+AZURE_OPENAI_API_VERSION=2023-03-15-preview
