--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,20 @@ version: '3'
 
 services:
   chat-email:
-    image: kongpf8848/chat-email:latest
-    container_name: chat-email
+    image: kongpf8848/chatemail:latest
+    container_name: chatemail
     ports:
       - 3000:3000
     environment:
-      - OPENAI_TYPE=${OPENAI_TYPE}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - AZURE_OPENAI_API_KEY=${AZURE_OPENAI_API_KEY}
-      - AZURE_OPENAI_API_DEPLOYMENT_NAME=${AZURE_OPENAI_API_DEPLOYMENT_NAME}
-      - AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME=${AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME}
-      - AZURE_OPENAI_API_INSTANCE_NAME=${AZURE_OPENAI_API_INSTANCE_NAME}
-      - AZURE_OPENAI_API_VERSION=${AZURE_OPENAI_API_VERSION}
-      - SUPABASE_API_KEY=${SUPABASE_API_KEY}
-      - SUPABASE_API_URL=${SUPABASE_API_URL}
-      - NEXT_PUBLIC_CHAT_FILES_UPLOAD_PATH=public/uploads
-      - NEXT_PUBLIC_CHAT_FILES_MAX_SIZE=10000000
+      NEXT_PUBLIC_CHAT_FILES_MAX_SIZE: 10000000 #10MB
+      NEXT_PUBLIC_CHAT_FILES_UPLOAD_PATH: public/uploads
+      SUPABASE_API_URL: <SUPABASE_API_URL>
+      SUPABASE_API_KEY: <SUPABASE_API_KEY>
+      OPENAI_TYPE: OPENAI #AZURE_OPENAI
+      OPENAI_API_KEY: <OPENAI_API_KEY>
+      AZURE_OPENAI_API_KEY: <AZURE_OPENAI_API_KEY>
+      AZURE_OPENAI_API_DEPLOYMENT_NAME: <AZURE_OPENAI_API_DEPLOYMENT_NAME>
+      AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME: <AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME>
+      AZURE_OPENAI_API_INSTANCE_NAME: <AZURE_OPENAI_API_INSTANCE_NAME>
+      AZURE_OPENAI_API_VERSION: 2023-03-15-preview
+    
