--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,21 @@ version: '3'
 
 services:
   chat-email:
-    image: kongpf8848/chatemail:latest
+    image: chatemail:latest
     container_name: chatemail
     ports:
       - 3000:3000
     environment:
       NEXT_PUBLIC_CHAT_FILES_MAX_SIZE: 10000000 #10MB
       NEXT_PUBLIC_CHAT_FILES_UPLOAD_PATH: public/uploads
-      SUPABASE_API_URL: <SUPABASE_API_URL>
-      SUPABASE_API_KEY: <SUPABASE_API_KEY>
-      OPENAI_TYPE: OPENAI #AZURE_OPENAI
+      SUPABASE_API_URL: https://uockjzrexymqyplukjpk.supabase.co
+      SUPABASE_API_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVvY2tqenJleHltcXlwbHVranBrIiwicm9sZSI6ImFub24iLCJpYXQiOjE2ODkzMTg1NjAsImV4cCI6MjAwNDg5NDU2MH0.5CwIY2ANaX0IBIogX2dL6DkC-nwx90Xey_dsiLZP7B8
+      OPENAI_TYPE: AZURE_OPENAI
       OPENAI_API_KEY: <OPENAI_API_KEY>
-      AZURE_OPENAI_API_KEY: <AZURE_OPENAI_API_KEY>
-      AZURE_OPENAI_API_DEPLOYMENT_NAME: <AZURE_OPENAI_API_DEPLOYMENT_NAME>
-      AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME: <AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME>
-      AZURE_OPENAI_API_INSTANCE_NAME: <AZURE_OPENAI_API_INSTANCE_NAME>
+      OPENAI_API_MODEL: gpt-3.5-turbo
+      AZURE_OPENAI_API_KEY: 55b12bd7a60841a2a75d25c58fa8f21a
+      AZURE_OPENAI_API_DEPLOYMENT_NAME: gpt35
+      AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME: embedding
+      AZURE_OPENAI_API_INSTANCE_NAME: aiemail
       AZURE_OPENAI_API_VERSION: 2023-03-15-preview
     
