--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
     environment:
       NEXT_PUBLIC_CHAT_FILES_MAX_SIZE: 10000000 #10MB
       NEXT_PUBLIC_CHAT_FILES_UPLOAD_PATH: public/uploads
-      SUPABASE_API_URL: https://uockjzrexymqyplukjpk.supabase.co
-      SUPABASE_API_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVvY2tqenJleHltcXlwbHVranBrIiwicm9sZSI6ImFub24iLCJpYXQiOjE2ODkzMTg1NjAsImV4cCI6MjAwNDg5NDU2MH0.5CwIY2ANaX0IBIogX2dL6DkC-nwx90Xey_dsiLZP7B8
+      SUPABASE_API_URL: https://xxxx.supabase.co
+      SUPABASE_API_KEY: xxxx
       OPENAI_TYPE: AZURE_OPENAI
       OPENAI_API_KEY: <OPENAI_API_KEY>
       OPENAI_API_MODEL: gpt-3.5-turbo
-      AZURE_OPENAI_API_KEY: 55b12bd7a60841a2a75d25c58fa8f21a
-      AZURE_OPENAI_API_DEPLOYMENT_NAME: gpt35
-      AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME: embedding
-      AZURE_OPENAI_API_INSTANCE_NAME: aiemail
+      AZURE_OPENAI_API_KEY: xxx
+      AZURE_OPENAI_API_DEPLOYMENT_NAME: xxx
+      AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME: xxx
+      AZURE_OPENAI_API_INSTANCE_NAME: xxx
       AZURE_OPENAI_API_VERSION: 2023-03-15-preview
     
